.archive/cilium/app/netpols/cilium-vxlan.yaml
# yaml-language-server: $schema=https://ks.hsn.dev/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cilium-vxlan
spec:
  nodeSelector:
    # apply to all nodes
    matchLabels: {}
  ingress:
  # node -> vxlan
  - fromEntities:
    - remote-node
    toPorts:
    - ports:
      - port: '8472'
        protocol: UDP
  egress:
  # node -> vxlan
  - toEntities:
    - remote-node
    toPorts:
    - ports:
      - port: '8472'
        protocol: UDP
